# editorconfig-cli

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  pyproject.toml  release_body.md
src/editorconfig_cli/: main.py
tools/: release.py
